--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 apispec==0.39.0
+certifi==2018.11.29
+chardet==3.0.4
 Click==7.0
+docopt==0.6.2
 flasgger==0.9.1
 Flask==1.0.2
 gunicorn==19.9.0
+idna==2.8
+iexfinance==0.3.5
 itsdangerous==1.1.0
 Jinja2==2.10
 jsonschema==2.6.0
-marshmallow==3.0.0.b12
+kelly-criterion==1.2.0
 MarkupSafe==1.1.0
+marshmallow==3.0.0b12
 mistune==0.8.4
+numpy==1.16.1
+pandas==0.23.4
 pbr==5.1.2
-PyYAML==3.13
+python-dateutil==2.8.0
+pytz==2018.9
+PyYAML==4.2b1
+requests==2.21.0
 six==1.12.0
+urllib3==1.24.1
 Werkzeug==0.14.1
-kelly_criterion==1.2.0
