ENH: Add license & warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,9 @@ console_scripts =
 
 
 [files]
-packages =
-  kelly_criterion
+packages = kelly_criterion_service
+package_data = kelly_criterion_service =
+    ../LICENSE
 
 [options]
 zip_save = False
